* Add color to shift templates.

--- a/trunk/war/WEB-INF/classes/Text_es.properties
+++ b/trunk/war/WEB-INF/classes/Text_es.properties
@@ -263,3 +263,5 @@ securityPara1=Para mayor seguridad, hay dos tipos de usuarios: los administrador
 allUsersLabel=Todos los Usuarios
 allRolesLabel=Todas las Funciones
 allShiftsLabel=Todos los Turnos 
+colorLabel=Color
+colorFieldValidCharsEdit=This field can only contain characters 0-9 or A-F.
